@@ -14,7 +14,7 @@ unsigned char cx = 7;
 unsigned short sx = 14;
 unsigned int ix = 21;
 unsigned long lx = 28;
-#if !defined (__SDCC_ds390) && !defined (__SDCC_hc08) && !defined (__SDCC_s08)
+#if !defined (__SDCC_mcs51) && !defined (__SDCC_ds390) && !defined (__SDCC_hc08) && !defined (__SDCC_s08)
 unsigned long long Lx = 35;
 #endif
 
@@ -25,24 +25,23 @@ testTortureExecute (void)
   unsigned short sy;
   unsigned int iy;
   unsigned long ly;
-#if !defined (__SDCC_ds390) && !defined (__SDCC_hc08) && !defined (__SDCC_s08)
+#if !defined (__SDCC_mcs51) && !defined (__SDCC_ds390) && !defined (__SDCC_hc08) && !defined (__SDCC_s08)
   unsigned long long Ly;
 #endif
 
-  cy = cx / 6; if (cy != 1) ASSERT (0);
-  cy = cx % 6; if (cy != 1) ASSERT (0);
+  cy = cx / 6; ASSERT (cy == 1);
+  cy = cx % 6; ASSERT (cy == 1);
 
-  sy = sx / 6; if (sy != 2) ASSERT (0);
-  sy = sx % 6; if (sy != 2) ASSERT (0);
+  sy = sx / 6; ASSERT (sy == 2);
+  sy = sx % 6; ASSERT (sy == 2);
 
-  iy = ix / 6; if (iy != 3) ASSERT (0);
-  iy = ix % 6; if (iy != 3) ASSERT (0);
+  iy = ix / 6; ASSERT (iy == 3);
+  iy = ix % 6; ASSERT (iy == 3);
 
-  ly = lx / 6; if (ly != 4) ASSERT (0);
-  ly = lx % 6; if (ly != 4) ASSERT (0);
+  ly = lx / 6; ASSERT (ly == 4);
+  ly = lx % 6; ASSERT (ly == 4);
 #if !defined (__SDCC_mcs51) && !defined (__SDCC_ds390) && !defined (__SDCC_hc08) && !defined (__SDCC_s08)
-  Ly = Lx / 6; if (Ly != 5) ASSERT (0);
-  Ly = Lx % 6; if (Ly != 5) ASSERT (0);
+  Ly = Lx / 6; ASSERT (Ly == 5);
+  Ly = Lx % 6; ASSERT (Ly == 5);
 #endif
 }
-
