@@ -1,3 +1,14 @@
+2017-04-26 Maarten Brock <sourceforge.brock AT dse.nl>
+
+	* src/ds390/gen.c (assignBit): disabled to fix a warning
+	* src/SDCCicode.c (geniCodeLeftShift): fixed bug, replaced TABs
+	* src/SDCCralloc.hpp (create_cfg): fixed warning, replaced TABs
+	* src/SDCCsymt.c (computeType): fixed bug #2585
+	* src/stm8/ralloc2.cc (assign_operands_for_cost): fixed warning, replaced TABs
+	* src/z80/gen.c (genLeftShift, genRightShift): fixed warning
+	* src/z80/peep.c (z80SurelyWrites): fixed warning
+	* support/regression/tests/gcc-torture-execute-20020201-1.c
+
 2017-04-24 Philipp Klaus Krause <pkk AT spth.de>
 
 	* src/SDCCast.c,
